Updated a few comments

--- a/notebook/02_master_analysis.ipynb
+++ b/notebook/02_master_analysis.ipynb
@@ -87,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "f2539338",
    "metadata": {},
    "outputs": [
@@ -130,7 +130,7 @@
     "print(\"=\"*80)\n",
     "\n",
     "# Load the data\n",
-    "# Make sure listings.csv.gz is in the same folder as this notebook!\n",
+    "# Making sure listings.csv.gz is in the same folder as this notebook!\n",
     "filepath = '/Users/theomthakur/Documents/NYU/Semester 3/Data Science and AI for Business/Project/data/listings.csv.gz'\n",
     "\n",
     "try:\n",
@@ -286,7 +286,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "ad498d75",
    "metadata": {},
    "outputs": [
@@ -318,8 +318,8 @@
     "print(\"SECTION 3: DATA FILTERING AND SCOPING\")\n",
     "print(\"=\"*80)\n",
     "\n",
-    "# 🎯 IMPORTANT: UPDATE THESE WITH YOUR CHOSEN NEIGHBORHOODS!\n",
-    "# Look at the output above and pick 2-3 neighborhoods with:\n",
+    "# 🎯 IMPORTANT: UPDATE THESE WITH CHOSEN NEIGHBORHOODS!\n",
+    "# From the output above picking 2-3 neighborhoods with:\n",
     "# - Different price points (high, mid, low)\n",
     "# - Sufficient data (at least 200-300 listings each)\n",
     "\n",
